package model;

import java.util.*;

public class Transaction extends Observable implements Observer {

    @Override
    public void update(Observable o, Object arg) {
        // TODO Auto-generated method stub

    }

}
